# apt-scraper

./: README.md  pyproject.toml  setup.py
apt_scraper/: extract.py  parser.py  request_html.py  transform.py
