[tool.poetry]
name = "apt-scraper"
version = "0.1.0"
description = "Scrape apartment prices."
readme = "README.md"
authors = ["Matt Bucter <matthewbucter@gmail.com"]

[tool.poetry.dependencies]
python="~3.7"
click = "^7.0"
pandas = "^1.0.3"
requests = "^2.23.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pytest-cov = "^2.7"
poetry-setup = "^0.3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"